[gd_scene load_steps=28 format=3 uid="uid://06wdk2nxfclf"]

[ext_resource type="Texture2D" uid="uid://btl1sewksevpt" path="res://assets/sprites/test/background_1.png" id="1_d10np"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_l0ch1"]
[ext_resource type="Script" path="res://scripts/game_state_machine/game_state_machine.gd" id="2_70o6n"]
[ext_resource type="PackedScene" uid="uid://csqgvmp0y0usj" path="res://scenes/Totem/totem_head.tscn" id="3_2kbyh"]
[ext_resource type="Script" path="res://scenes/Totem/totem_head_manager.gd" id="3_a54i6"]
[ext_resource type="Script" path="res://scripts/game_state_machine/game_states/game_start_state.gd" id="3_mhdu6"]
[ext_resource type="Script" path="res://scripts/game_state_machine/game_states/game_setup_state.gd" id="4_57mg2"]
[ext_resource type="Script" path="res://scenes/Enemies/path_spawner.gd" id="5_20i83"]
[ext_resource type="Script" path="res://scenes/Enemies/enemy_spawner_manager.gd" id="5_ga21b"]
[ext_resource type="Script" path="res://scripts/game_state_machine/game_states/game_shop_state.gd" id="5_oiq8e"]
[ext_resource type="Script" path="res://scripts/game_state_machine/game_states/game_battle_start_state.gd" id="6_boxnl"]
[ext_resource type="Script" path="res://scripts/game_state_machine/game_states/game_battle_state.gd" id="7_jtwqv"]
[ext_resource type="Script" path="res://scenes/shop_ui.gd" id="7_xewfl"]
[ext_resource type="Script" path="res://scripts/game_state_machine/game_states/game_battle_end_state.gd" id="8_bfm56"]
[ext_resource type="Script" path="res://scripts/game_state_machine/game_states/game_over_state.gd" id="9_mm5ci"]
[ext_resource type="Script" path="res://scenes/cursor_detector.gd" id="15_jas3j"]
[ext_resource type="Script" path="res://scenes/town.gd" id="16_v1yyn"]

[sub_resource type="Curve2D" id="Curve2D_0pey5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -76, -16, 0, 0, 0, 0, -255, -16, 0, 0, 0, 0, -255, -202, 0, 0, 0, 0, -171, -202, 0, 0, 0, 0, -172, -61)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_k5k0p"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -73, -7, 0, 0, 0, 0, -267, -6, 0, 0, 0, 0, -266, -173, 0, 0, 0, 0, -153, -173, 0, 0, 0, 0, -153, -62)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_bw5qc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -73, 6, 0, 0, 0, 0, -282, 5, 0, 0, 0, 0, -280, -142, 0, 0, 0, 0, -129, -144, 0, 0, 0, 0, -129, -63)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_85qkx"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -73, 19, 0, 0, 0, 0, -298, 20, 0, 0, 0, 0, -297, -112, 0, 0, 0, 0, -104, -114, 0, 0, 0, 0, -105, -64)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_ro0jb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 65, -17, 0, 0, 0, 0, 245, -19, 0, 0, 0, 0, 245, -201, 0, 0, 0, 0, 183, -201, 0, 0, 0, 0, 185, -71)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_ybda4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 65, -6, 0, 0, 0, 0, 261, -7, 0, 0, 0, 0, 261, -173, 0, 0, 0, 0, 155, -172, 0, 0, 0, 0, 155, -72)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_shaij"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 65, 6, 0, 0, 0, 0, 278, 2, 0, 0, 0, 0, 278, -144, 0, 0, 0, 0, 126, -143, 0, 0, 0, 0, 127, -73)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_2rswa"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 65, 20, 0, 0, 0, 0, 295, 19, 0, 0, 0, 0, 296, -114, 0, 0, 0, 0, 97, -114, 0, 0, 0, 0, 96, -73)
}
point_count = 5

[sub_resource type="CircleShape2D" id="CircleShape2D_vet1i"]
radius = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d7ul5"]
size = Vector2(106, 20)

[node name="Main" type="Node2D"]
script = ExtResource("1_l0ch1")

[node name="Background" type="Node2D" parent="."]
position = Vector2(320, 180)

[node name="BackgroundImage" type="Sprite2D" parent="Background"]
texture = ExtResource("1_d10np")

[node name="TotemHeads" type="Node2D" parent="."]
position = Vector2(320, 100)
script = ExtResource("3_a54i6")

[node name="TotemHead" parent="TotemHeads" instance=ExtResource("3_2kbyh")]

[node name="TotemHead2" parent="TotemHeads" instance=ExtResource("3_2kbyh")]
position = Vector2(0, 28)

[node name="TotemHead3" parent="TotemHeads" instance=ExtResource("3_2kbyh")]
position = Vector2(0, 57)

[node name="TotemHead4" parent="TotemHeads" instance=ExtResource("3_2kbyh")]
position = Vector2(0, 86)

[node name="EnemyPaths" type="Node2D" parent="."]
position = Vector2(320, 300)
script = ExtResource("5_ga21b")

[node name="LeftPath1" type="Path2D" parent="EnemyPaths"]
curve = SubResource("Curve2D_0pey5")
script = ExtResource("5_20i83")

[node name="LeftPath2" type="Path2D" parent="EnemyPaths"]
curve = SubResource("Curve2D_k5k0p")
script = ExtResource("5_20i83")

[node name="LeftPath3" type="Path2D" parent="EnemyPaths"]
curve = SubResource("Curve2D_bw5qc")
script = ExtResource("5_20i83")

[node name="LeftPath4" type="Path2D" parent="EnemyPaths"]
curve = SubResource("Curve2D_85qkx")
script = ExtResource("5_20i83")

[node name="RightPath1" type="Path2D" parent="EnemyPaths"]
curve = SubResource("Curve2D_ro0jb")
script = ExtResource("5_20i83")

[node name="RightPath2" type="Path2D" parent="EnemyPaths"]
curve = SubResource("Curve2D_ybda4")
script = ExtResource("5_20i83")

[node name="RightPath3" type="Path2D" parent="EnemyPaths"]
curve = SubResource("Curve2D_shaij")
script = ExtResource("5_20i83")

[node name="RightPath4" type="Path2D" parent="EnemyPaths"]
curve = SubResource("Curve2D_2rswa")
script = ExtResource("5_20i83")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="StartGameButton" type="Button" parent="UI/MainUI"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Start Game"

[node name="NextWaveButton" type="Button" parent="UI/MainUI"]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "NEXT WAVE"

[node name="ShopButton" type="Button" parent="UI/MainUI"]
visible = false
layout_mode = 0
offset_left = 464.0
offset_top = 135.0
offset_right = 516.0
offset_bottom = 166.0
text = "SHOP"

[node name="ShopUI" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_xewfl")

[node name="Cash" type="Label" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 301.0
offset_top = 7.0
offset_right = 341.0
offset_bottom = 30.0

[node name="Panel" type="Panel" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 113.0
offset_top = 5.0
offset_right = 527.0
offset_bottom = 230.0

[node name="Head1L" type="Button" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 120.0
offset_top = 61.0
offset_right = 263.0
offset_bottom = 92.0
text = "Unlock Head 1 (L)"

[node name="Head1LPrice" type="Label" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 267.0
offset_top = 64.0
offset_right = 307.0
offset_bottom = 87.0
text = "0
"

[node name="Head1R" type="Button" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 376.0
offset_top = 61.0
offset_right = 520.0
offset_bottom = 92.0
text = "Unlock Head 1 (R)"

[node name="Head1RPrice" type="Label" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 336.0
offset_top = 65.0
offset_right = 376.0
offset_bottom = 88.0

[node name="Head2L" type="Button" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 120.0
offset_top = 99.0
offset_right = 263.0
offset_bottom = 130.0
text = "Unlock Head 2 (L)"

[node name="Head2LPrice" type="Label" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 267.0
offset_top = 102.0
offset_right = 307.0
offset_bottom = 125.0

[node name="Head2R" type="Button" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 376.0
offset_top = 99.0
offset_right = 520.0
offset_bottom = 130.0
text = "Unlock Head 2 (R)"

[node name="Head2RPrice" type="Label" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 334.0
offset_top = 102.0
offset_right = 374.0
offset_bottom = 125.0

[node name="Head3L" type="Button" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 119.0
offset_top = 143.0
offset_right = 262.0
offset_bottom = 174.0
text = "Unlock Head 3 (L)"

[node name="Head3LPrice" type="Label" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 264.0
offset_top = 148.0
offset_right = 304.0
offset_bottom = 171.0

[node name="Head3R" type="Button" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 377.0
offset_top = 143.0
offset_right = 521.0
offset_bottom = 174.0
text = "Unlock Head 3 (R)"

[node name="Head3RPrice" type="Label" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 339.0
offset_top = 142.0
offset_right = 379.0
offset_bottom = 165.0

[node name="Head4L" type="Button" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 119.0
offset_top = 183.0
offset_right = 262.0
offset_bottom = 214.0
text = "Unlock Head 4 (L)"

[node name="Head4LPrice" type="Label" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 260.0
offset_top = 185.0
offset_right = 300.0
offset_bottom = 208.0

[node name="Head4R" type="Button" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 377.0
offset_top = 185.0
offset_right = 521.0
offset_bottom = 216.0
text = "Unlock Head 4 (R)"

[node name="Head4RPrice" type="Label" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 337.0
offset_top = 189.0
offset_right = 377.0
offset_bottom = 212.0

[node name="DamageUp" type="Button" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 133.0
offset_top = 15.0
offset_right = 291.0
offset_bottom = 46.0
text = "Totem Damage Up"

[node name="FireRateUp" type="Button" parent="UI/ShopUI"]
layout_mode = 0
offset_left = 349.0
offset_top = 17.0
offset_right = 493.0
offset_bottom = 48.0
text = "Fire Rate Up"

[node name="GameStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_70o6n")
initial_state = NodePath("GameStartState")

[node name="GameStartState" type="Node" parent="GameStateMachine"]
script = ExtResource("3_mhdu6")

[node name="GameSetupState" type="Node" parent="GameStateMachine"]
script = ExtResource("4_57mg2")
state = 1

[node name="GameShopState" type="Node" parent="GameStateMachine"]
script = ExtResource("5_oiq8e")
state = 2

[node name="GameBattleStartState" type="Node" parent="GameStateMachine"]
script = ExtResource("6_boxnl")
state = 3

[node name="GameBattleState" type="Node" parent="GameStateMachine"]
script = ExtResource("7_jtwqv")
state = 4

[node name="GameBattleEndState" type="Node" parent="GameStateMachine"]
script = ExtResource("8_bfm56")
state = 5

[node name="GameOverState" type="Node" parent="GameStateMachine"]
script = ExtResource("9_mm5ci")
state = 6

[node name="CursorDetector" type="Node2D" parent="."]
script = ExtResource("15_jas3j")

[node name="CursorDetectorArea" type="Area2D" parent="CursorDetector"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CursorDetector/CursorDetectorArea"]
shape = SubResource("CircleShape2D_vet1i")

[node name="Towns" type="Node2D" parent="."]

[node name="Town" type="Node2D" parent="Towns"]
position = Vector2(179, 242)
script = ExtResource("16_v1yyn")

[node name="HealthBar" type="ProgressBar" parent="Towns/Town"]
offset_left = -50.0
offset_top = 12.0
offset_right = 50.0
offset_bottom = 16.0
show_percentage = false

[node name="Area2D" type="Area2D" parent="Towns/Town"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towns/Town/Area2D"]
shape = SubResource("RectangleShape2D_d7ul5")

[node name="Town2" type="Node2D" parent="Towns"]
position = Vector2(456, 242)
script = ExtResource("16_v1yyn")

[node name="HealthBar" type="ProgressBar" parent="Towns/Town2"]
offset_left = -50.0
offset_top = 12.0
offset_right = 50.0
offset_bottom = 16.0
show_percentage = false

[node name="Area2D" type="Area2D" parent="Towns/Town2"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towns/Town2/Area2D"]
shape = SubResource("RectangleShape2D_d7ul5")

[connection signal="totem_direction_activated" from="TotemHeads" to="UI/ShopUI" method="_on_totem_heads_totem_direction_activated"]
[connection signal="pressed" from="UI/MainUI/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="UI/MainUI/NextWaveButton" to="." method="_on_next_wave_button_pressed"]
[connection signal="pressed" from="UI/MainUI/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="UI/ShopUI/Head1L" to="TotemHeads" method="_on_head_1l_pressed"]
[connection signal="pressed" from="UI/ShopUI/Head1R" to="TotemHeads" method="_on_head_1r_pressed"]
[connection signal="pressed" from="UI/ShopUI/Head2L" to="TotemHeads" method="_on_head_2l_pressed"]
[connection signal="pressed" from="UI/ShopUI/Head2R" to="TotemHeads" method="_on_head_2r_pressed"]
[connection signal="pressed" from="UI/ShopUI/Head3L" to="TotemHeads" method="_on_head_3l_pressed"]
[connection signal="pressed" from="UI/ShopUI/Head3R" to="TotemHeads" method="_on_head_3r_pressed"]
[connection signal="pressed" from="UI/ShopUI/Head4L" to="TotemHeads" method="_on_head_4l_pressed"]
[connection signal="pressed" from="UI/ShopUI/Head4R" to="TotemHeads" method="_on_head_4r_pressed"]
[connection signal="pressed" from="UI/ShopUI/DamageUp" to="TotemHeads" method="_on_damage_up_pressed"]
[connection signal="area_entered" from="CursorDetector/CursorDetectorArea" to="CursorDetector" method="_on_cursor_detector_area_area_entered"]
[connection signal="area_exited" from="CursorDetector/CursorDetectorArea" to="CursorDetector" method="_on_cursor_detector_area_area_exited"]
[connection signal="area_entered" from="Towns/Town/Area2D" to="Towns/Town" method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Towns/Town2/Area2D" to="Towns/Town2" method="_on_area_2d_area_entered"]
